--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_vector_icons: ^2.0.0
   google_fonts: ^4.0.3
   introduction_screen: ^3.1.4
+  faker: ^2.1.0
 
 dev_dependencies:
   flutter_test:
