--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts: ^4.0.3
   introduction_screen: ^3.1.4
   faker: ^2.1.0
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
