--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   introduction_screen: ^3.1.4
   faker: ^2.1.0
   get: ^4.6.5
+  flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
   flutter_test:
