--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   faker: ^2.1.0
   get: ^4.6.5
   flutter_staggered_animations: ^1.1.1
+  flutter_secure_storage: ^8.0.0
+  floor: ^1.4.2
 
 dev_dependencies:
   flutter_test:
