--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   flutter_secure_storage: ^8.0.0
   floor: ^1.4.2
+  image_picker: ^1.0.0
 
 dev_dependencies:
   flutter_test:
